fixed bug: z-index issue preventing filters from being clickable when overlapped
Had to move the css before selector to a z-index of -1.

--- a/public/stylesheets/base.scss
+++ b/public/stylesheets/base.scss
@@ -320,14 +320,13 @@ label[for='toggle-all'] {
     bottom: 40px;
     left: 0;
     height: 40px;
-    //z-index: -1;
+    z-index: -1;
     box-shadow: 0 40px 0 -6px rgba(255, 255, 255, 0.8),
                 0 41px 2px -6px rgba(0, 0, 0, 0.2);
   }
 
   &:nth-of-type(1) {
     margin-top: -4px;
-    z-index: 1; // place first filter above the notepad shadow
   }
 }
 
